web-api : 태그 생성,, 추가. 삽입 이동

--- a/2.web-api/2.DOM 제어/2.부모 형제 노드 탐색.html
+++ b/2.web-api/2.DOM 제어/2.부모 형제 노드 탐색.html
@@ -31,7 +31,8 @@
       const $found = $grap.closest('.warp');
       console.log($found);
 
-      $grap.querySelector('a');
+      const a = $grap.querySelector('a');
+      console.log(a);
 
     </script>
   </body>
