--- a/1.core-js/App/Calculator/index.html
+++ b/1.core-js/App/Calculator/index.html
@@ -28,9 +28,13 @@
         <button type="button" id="btn-divide">/</button>
       </div>
     </section>
-    <section id="results">
+    <section id="results" class="card">
       <h2 id="current-calculation">0</h2>
       <h2>Result: <span id="current-result">0</span></h2>
+    </section>
+    <section id="logs" class="card">
+      <ul class="log-entries">
+      </ul>
     </section>
   </body>
 </html>
