ajax : 종합실습 일정관리프로그램 - 할일 목록 불러오기

--- a/2.web-api/3.속선노드/2.속성조작하기.html
+++ b/2.web-api/3.속선노드/2.속성조작하기.html
@@ -23,7 +23,7 @@
         const title = $box.getAttribute('title');
         console.log(`title : ${title}`);
 
-        $box.setAttribute('id', 'value')
+        $box.setAttribute('id', 'value');
         $box.setAttribute('id', 'item');
 
         // 속성값 추가
@@ -34,7 +34,7 @@
 
         // 속성값 유무 확인
         console.log($box.hasAttribute('style'));
-.    </script>
+    </script>
 
 </body>
 </html>
